K8s/Ingress/ingress-platform-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-and-api
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts: [smartdevops.lat]
      secretName: smartdevops-tls-prod
  rules:
    - host: smartdevops.lat
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: platform-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
