K8s/Ingress/ingress-smartdevops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-smartdevops
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - smartdevops.lat
      secretName: smartdevops-tls-prod
  rules:
    - host: smartdevops.lat
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: platform-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
